log/build_2024-09-29_22-28-40/tb_control/stderr.log
  File "/home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control/tb_openLoop.py", line 73
    elif(self.i > 7 && self.i <=14):
                     ^
SyntaxError: invalid syntax

